makko/default/yuri/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: yuri
  name: yuri
  namespace: default
spec:
  replicas: 0
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: yuri
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: yuri
    spec:
      containers:
      - image: registry.senk0.com/kayro-nightly:latest
        imagePullPolicy: Always
        name: yuri
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            ephemeral-storage: 4Gi
            memory: 4Gi
          requests:
            cpu: 10m
            memory: 256Mi
      restartPolicy: Always
