makko/default/yuri/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yuri
spec:
  selector:
    app: yuri
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer
