makko/default/yuri/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yuri
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https
  hostnames:
    - "yuri.senk0.com"
  rules:
    - backendRefs:
        - name: yuri
          port: 8080
